import("//feature/kernel.gni")

config("common") {
  cflags = [
    "-ggdb3",
    "-fno-pie",
    "-fno-builtin",
    "-nostdlib",
    "-Werror=return-type",
    "-Werror=uninitialized",
    "-fno-stack-protector",
    "-w",
    "-Wno-int-conversion",
  ]
  if (is_clang) {
    cflags += [ "-Wno-incompatible-function-pointer-types" ]
  }
  include_dirs = [
    "//",
    "//include",
    "//3rdparty",
    "//3rdparty/lwext4",
    "//3rdparty/lwext4/include",
  ]

  defines = [
    "__DEBUG__",
    "CONFIG_EXT_FEATURE_SET_LVL=2",
    "CONFIG_JOURNALING_ENABLE=0",
    "CONFIG_DIR_INDEX_COMB_SORT=1",
    "CONFIG_HAVE_OWN_ERRNO=1",
    "CONFIG_DEBUG_PRINTF=0",
    "CONFIG_DEBUG_ASSERT=0",
    "CONFIG_HAVE_OWN_ASSERT=1",
    "CONFIG_HAVE_OWN_OFLAGS=1",
    "CONFIG_USE_USER_MALLOC=0",
    "CONFIG_EXT4_MOUNTPOINTS_COUNT=32",
  ]
}

kernel_exec("kernel") {
  deps = [
    "3rdparty",
    "src",
  ]
  ldflags = [
    "-m",
    "elf_i386",
    "-T",
    rebase_path("//link.ld"),
  ]
}
