common_cflags = [
  "-fno-pie",
  "-fno-builtin",
  "-nostdlib",
  "-Werror=return-type",
  "-Werror=uninitialized",
  "-fno-stack-protector",
  "-w",
  "-Wno-int-conversion",
]

common_includes = [
  "//",
  "//include",
  "//3rdparty",
  "//3rdparty/lwext4",
  "//3rdparty/lwext4/include",
]

common_defines = [
  "__DEBUG__",
  "CONFIG_EXT_FEATURE_SET_LVL=2",
  "CONFIG_JOURNALING_ENABLE=0",
  "CONFIG_DIR_INDEX_COMB_SORT=1",
  "CONFIG_HAVE_OWN_ERRNO=1",
  "CONFIG_DEBUG_PRINTF=0",
  "CONFIG_DEBUG_ASSERT=0",
  "CONFIG_HAVE_OWN_ASSERT=1",
  "CONFIG_HAVE_OWN_OFLAGS=1",
  "CONFIG_USE_USER_MALLOC=0",
  "CONFIG_EXT4_MOUNTPOINTS_COUNT=1",
]
